--- a/index.html
+++ b/index.html
@@ -47,14 +47,28 @@
       <input type="text" name="name" value="email address"></input>
       <input type="button" value="Download Intinerary"></input>
     </aside>
-    <section>
+    <section class="features">
+      <div class="content-wrapper">
      <h3> Have the work week you always dreamed of - without the bad wifi. </h3>
-      <p>Located in a peaceful bungalow outside Lake Geneva, Winsconsin.</p>
-      <p>12 private rooms with ensuite bathrooms, 2 group meeting rooms, and 4 breakout rooms.</p>
-      <p>Private chef team providing on demand meals - just like your team kitchen.</p>
-      <p>5 outdoor obstacle courses, including private beach 1/2 mile from the bungalow.</p>
-      <p>Retreat facilitator to manage your day to day activities so you all get a chance to reset.</p>
-      <p>Dedicated computer room for times that you must wifi.</p> 
+      <article>
+      <p class="fontawesome-icon"></p>
+      <p class="features-item-description">Located in a peaceful bungalow outside Lake Geneva, Winsconsin.</p></article>
+      <article><p class="fontawesome-icon"></p>
+      <p class="features-item-description">12 private rooms with ensuite bathrooms, 2 group meeting rooms, and 4 breakout rooms.</p></article>
+      <article><p class="fontawesome-icon"></p>
+      <p class="features-item-description">Private chef team providing on demand meals - just like your team kitchen.</p></article>
+      <article><p class="fontawesome-icon"></p>
+      <p class="features-item-description">5 outdoor obstacle courses, including private beach 1/2 mile from the bungalow.</p></article>
+      <article><p class="fontawesome-icon"></p>
+      <p class="features-item-description">Retreat facilitator to manage your day to day activities so you all get a chance to reset.</p></article>
+      <article><p class="fontawesome-icon"></p>
+      <p class="features-item-description">Dedicated computer room for times that you must wifi.</p> </article>
+    </section>
+    </div>
+    <section class="reviews">
+      <div class="content-wrapper">
+        
+      </div>
     </section>
     <section>
       <h3>Be a better team in 5 days, like this one.</h3>
