--- a/about/index.html
+++ b/about/index.html
@@ -23,7 +23,67 @@
 
   <body>
     <!-- Add your site or application content here -->
-    <p>Hello world! This is HTML5 Boilerplate.</p>
+    <header>
+      <div class ="content-wrapper">
+        <a href="#"><img src="" alt="unplugged logo"></a>
+        <nav>
+          <ul>
+            <li><a href="faq/index.html">FAQ</a></li>
+            <li><a href="about/index.html">About</a></li>
+          </ul>
+        </nav>
+      </div>
+
+    </header>
+    <main>
+      <section>
+        <h1>Retreat from the desk, return refreshed.</h1>
+        <img src="" alt="">
+      </section>
+      <input>
+        <h2> Want to joint the next retreat?</h2>
+        <p>Find out when we are holding our next retreat and how your company or team can sign up!</p>
+        <h4>Find out more</h4>
+        <input type="text" name="name" value="email address"></input>
+        <input type="button" value="Download Intinerary"></input>
+      </aside>
+      <section>
+       <h3> Have the work week you always dreamed of - without the bad wifi. </h3>
+        <p>Located in a peaceful bungalow outside Lake Geneva, Winsconsin.</p>
+        <p>12 private rooms with ensuite bathrooms, 2 group meeting rooms, and 4 breakout rooms.</p>
+        <p>Private chef team providing on demand meals - just like your team kitchen.</p>
+        <p>5 outdoor obstacle courses, including private beach 1/2 mile from the bungalow.</p>
+        <p>Retreat facilitator to manage your day to day activities so you all get a chance to reset.</p>
+        <p>Dedicated computer room for times that you must wifi.</p> 
+      </section>
+      <section>
+        <h3>Be a better team in 5 days, like this one.</h3>
+        <img> 
+        <h4>LaCrue Bottling Co.<br>
+        October 2018</h4>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. In eos earum maxime cumque velit eius eveniet sed obcaecati, voluptatum minima! Repudiandae quam magni sed consequuntur deserunt voluptas nemo similique perspiciatis.</p>
+      </section>
+    </main>
+    <footer>
+      <div class="content-wrapper">
+        <div class="footer-content">
+          <div class="contact"><h3>Contact</h3>
+              555-555-555 <br>
+              hello@unplugged.com
+            </address>
+          </div>
+          <div class="social"><h3>Social</h3>
+            <div class="social-icons">
+              <p><a href="https://www.instagram.com/yoursite" target="_blank">Instagram</a></p>
+              <p><a href="https://www.facebook.com/yoursite" target="_blank">Facebook</a></p>
+              <p><a href="https://www.twitter.com/yoursite" target="_blank">Twitter</a></p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="copyright"><p>Copyright 2021 | Unplugged</p></div>
+
+    </footer>
     <script src="../js/vendor/modernizr-3.11.2.min.js"></script>
     <script src="../js/plugins.js"></script>
     <script src="../js/main.js"></script>
