Added content to faq page

--- a/faq/index.html
+++ b/faq/index.html
@@ -2,7 +2,7 @@
 <html class="no-js" lang="">
   <head>
     <meta charset="utf-8" />
-    <title></title>
+    <title>Unplugged | FAQ</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
@@ -22,8 +22,69 @@
   </head>
 
   <body>
-    <!-- Add your site or application content here -->
-    <p>Hello world! This is HTML5 Boilerplate.</p>
+    <header>
+      <div class="content-wrapper">
+        <a href="#"><img src="" alt="unplugged logo" /></a>
+        <nav>
+          <ul>
+            <li><a href="/about/index.html">About</a></li>
+            <li><a href="/index.html">Home</a></li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+
+    <main>
+      <section class="faq">
+        <div class="content-wrapper">
+          <div class="faq-content">
+            <h2>Frequently Asked Questions</h2>
+
+            <h3>How long is the retreat?</h3>
+            <p>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. A
+              dolorem iure minima quo. Recusandae iure cupiditate nam? Eum ea
+              itaque libero, doloribus repellat velit mollitia, doloremque
+              assumenda, adipisci magni eveniet?
+            </p>
+            <h3>How many participants?</h3>
+            <p>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. A
+              dolorem iure minima quo. Recusandae iure cupiditate nam? Eum ea
+              itaque libero, doloribus repellat velit mollitia, doloremque
+              assumenda, adipisci magni eveniet?
+            </p>
+            <h3>Are there other activicties?</h3>
+            <p>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. A
+              dolorem iure minima quo. Recusandae iure cupiditate nam? Eum ea
+              itaque libero, doloribus repellat velit mollitia, doloremque
+              assumenda, adipisci magni eveniet?
+            </p>
+            <h3>How much does it cost?</h3>
+            <p>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. A
+              dolorem iure minima quo. Recusandae iure cupiditate nam? Eum ea
+              itaque libero, doloribus repellat velit mollitia, doloremque
+              assumenda, adipisci magni eveniet?
+            </p>
+            <h3>Are there any payment plans?</h3>
+            <p>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. A
+              dolorem iure minima quo. Recusandae iure cupiditate nam? Eum ea
+              itaque libero, doloribus repellat velit mollitia, doloremque
+              assumenda, adipisci magni eveniet?
+            </p>
+          </div>
+        </div>
+      </section>
+    </main>
+    <footer>
+      <div class="content-wrapper">
+        <div class="footer-content"></div>
+      </div>
+      <div class="copyright"><p>Copyright 2021 | Unplugged</p></div>
+    </footer>
     <script src="/js/vendor/modernizr-3.11.2.min.js"></script>
     <script src="/js/plugins.js"></script>
     <script src="/js/main.js"></script>
