--- a/index.html
+++ b/index.html
@@ -36,61 +36,84 @@
 
   </header>
   <main>
-    <section>
+    <section class="hero-area">
+      <div class="content-wrapper">
       <h1>Retreat from the desk, return refreshed.</h1>
-      <img src="" alt="">
+    </div>
     </section>
-    <input>
-      <h2> Want to joint the next retreat?</h2>
+    <aside>
+      <div class="content-wrapper">
+        <div class="form-description">
+      <h3> Want to joint the next retreat?</h3>
       <p>Find out when we are holding our next retreat and how your company or team can sign up!</p>
-      <h4>Find out more</h4>
+    </div>
+    <div class="form">
+      <h3>Find out more</h3>
       <input type="text" name="name" value="email address"></input>
       <input type="button" value="Download Intinerary"></input>
+    </div>
+    </div>
     </aside>
+
     <section class="features">
       <div class="content-wrapper">
-     <h3> Have the work week you always dreamed of - without the bad wifi. </h3>
-      <article>
-      <p class="fontawesome-icon"></p>
-      <p class="features-item-description">Located in a peaceful bungalow outside Lake Geneva, Winsconsin.</p></article>
-      <article><p class="fontawesome-icon"></p>
-      <p class="features-item-description">12 private rooms with ensuite bathrooms, 2 group meeting rooms, and 4 breakout rooms.</p></article>
-      <article><p class="fontawesome-icon"></p>
-      <p class="features-item-description">Private chef team providing on demand meals - just like your team kitchen.</p></article>
-      <article><p class="fontawesome-icon"></p>
-      <p class="features-item-description">5 outdoor obstacle courses, including private beach 1/2 mile from the bungalow.</p></article>
-      <article><p class="fontawesome-icon"></p>
-      <p class="features-item-description">Retreat facilitator to manage your day to day activities so you all get a chance to reset.</p></article>
-      <article><p class="fontawesome-icon"></p>
-      <p class="features-item-description">Dedicated computer room for times that you must wifi.</p> </article>
-    </section>
-    </div>
+     <h2> Have the work week you always dreamed of - without the bad wifi. </h2>
+      <div class="features-items">
+        <article>
+        <p class="fontawesome-icon"></p>
+        <p class="features-item-description">
+          Located in a peaceful bungalow outside Lake Geneva, Winsconsin.</p></article>
+        <article><p class="fontawesome-icon"></p>
+        <p class="features-item-description">12 private rooms with ensuite bathrooms, 2 group meeting rooms, and 4 breakout rooms.</p></article>
+        <article><p class="fontawesome-icon"></p>
+        <p class="features-item-description">Private chef team providing on demand meals - just like your team kitchen.</p></article>
+        <article><p class="fontawesome-icon"></p>
+        <p class="features-item-description">5 outdoor obstacle courses, including private beach 1/2 mile from the bungalow.</p></article>
+        <article><p class="fontawesome-icon"></p>
+        <p class="features-item-description">Retreat facilitator to manage your day to day activities so you all get a chance to reset.</p></article>
+        <article><p class="fontawesome-icon"></p>
+        <p class="features-item-description">Dedicated computer room for times that you must wifi.</p> </article>
+      </div>
+      </div>
+      </section>
+   
     <section class="reviews">
       <div class="content-wrapper">
-        
-      </div>
+        <h2>Be a better team in 5 days, like this one.</h2>
+        <article>
+          <h3>LaCrue Bottling Co.
+            October 2018</h3>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. In eos earum maxime cumque velit eius eveniet sed obcaecati, voluptatum minima! Repudiandae quam magni sed consequuntur deserunt voluptas nemo similique perspiciatis.</p>
+          </div>
+        </article>
     </section>
-    <section>
-      <h3>Be a better team in 5 days, like this one.</h3>
-      <img> 
-      <h4>LaCrue Bottling Co.<br>
-      October 2018</h4>
-      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. In eos earum maxime cumque velit eius eveniet sed obcaecati, voluptatum minima! Repudiandae quam magni sed consequuntur deserunt voluptas nemo similique perspiciatis.</p>
-    </section>
+  
   </main>
   <footer>
     <div class="content-wrapper">
       <div class="footer-content">
-        <div class="contact"><h3>Contact</h3>
+        <div class="contact">
+          <h4>Contact</h4>
+          <address>
+            <p>
             555-555-555 <br>
             hello@unplugged.com
+          </p>
           </address>
         </div>
-        <div class="social"><h3>Social</h3>
+
+        <div class="social">
+          <h4>Social</h4>
           <div class="social-icons">
-            <p><a href="https://www.instagram.com/yoursite" target="_blank">Instagram</a></p>
-            <p><a href="https://www.facebook.com/yoursite" target="_blank">Facebook</a></p>
-            <p><a href="https://www.twitter.com/yoursite" target="_blank">Twitter</a></p>
+            <p>
+              <a href="https://www.instagram.com/yoursite" target="_blank">Instagram</a>
+            </p>
+            <p>
+              <a href="https://www.facebook.com/yoursite" target="_blank">Facebook</a>
+            </p>
+            <p>
+              <a href="https://www.twitter.com/yoursite" target="_blank">Twitter</a>
+            </p>
           </div>
         </div>
       </div>
