--- a/index.html
+++ b/index.html
@@ -25,7 +25,10 @@
 <body>
   <header>
     <div class ="content-wrapper">
-      <a href="#"><img src="" alt="unplugged logo"></a>
+      <a href="#">
+        <img src="" alt="unplugged logo">
+      </a>
+      <div class="header-divider"></div>
       <nav>
         <ul>
           <li><a href="faq/index.html">FAQ</a></li>
@@ -81,11 +84,13 @@
       <div class="content-wrapper">
         <h2>Be a better team in 5 days, like this one.</h2>
         <article>
+          <div>
           <h3>LaCrue Bottling Co.
             October 2018</h3>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. In eos earum maxime cumque velit eius eveniet sed obcaecati, voluptatum minima! Repudiandae quam magni sed consequuntur deserunt voluptas nemo similique perspiciatis.</p>
           </div>
         </article>
+      </div>
     </section>
   
   </main>
