--- a/index.html
+++ b/index.html
@@ -26,9 +26,11 @@
 <body>
   <header>
     <div class ="content-wrapper">
-      <a href="#">
-        <img src="" alt="unplugged logo">
+      <figure>
+      <a href="">
+        <img src="/img/unpluggedlogo.png" alt="unplugged logo">
       </a>
+    </figure>
       <div class="header-divider"></div>
       <nav>
         <ul>
@@ -42,7 +44,7 @@
   <main>
     <section class="hero-area">
       <div class="content-wrapper">
-      <h1>Retreat from the desk, return refreshed.</h1>
+      <h1>Retreat from the desk,<br> return refreshed.</h1>
     </div>
     </section>
     <aside>
@@ -85,6 +87,9 @@
       <div class="content-wrapper">
         <h2>Be a better team in 5 days, like this one.</h2>
         <article>
+          <figure>
+            <img src="/img/unplugged-retreat-lacrue.jpg" alt="group of women gathered together">
+          </figure>
           <div>
           <h3>LaCrue Bottling Co.
             October 2018</h3>
