--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
 
   <meta name="theme-color" content="#fafafa">
 </head>
@@ -66,18 +67,18 @@
      <h2> Have the work week you always dreamed of - without the bad wifi. </h2>
       <div class="features-items">
         <article>
-        <p class="fontawesome-icon"></p>
+        <p class="fontawesome-icon"><i class="fas fa-campground"></i></p>
         <p class="features-item-description">
           Located in a peaceful bungalow outside Lake Geneva, Winsconsin.</p></article>
-        <article><p class="fontawesome-icon"></p>
+        <article><p class="fontawesome-icon"><i class="fas fa-bed"></i></p>
         <p class="features-item-description">12 private rooms with ensuite bathrooms, 2 group meeting rooms, and 4 breakout rooms.</p></article>
-        <article><p class="fontawesome-icon"></p>
+        <article><p class="fontawesome-icon"><i class="fas fa-utensils"></i></p>
         <p class="features-item-description">Private chef team providing on demand meals - just like your team kitchen.</p></article>
-        <article><p class="fontawesome-icon"></p>
+        <article><p class="fontawesome-icon"><i class="fas fa-shoe-prints"></i></p>
         <p class="features-item-description">5 outdoor obstacle courses, including private beach 1/2 mile from the bungalow.</p></article>
-        <article><p class="fontawesome-icon"></p>
+        <article><p class="fontawesome-icon"><i class="fas fa-smile"></i></p>
         <p class="features-item-description">Retreat facilitator to manage your day to day activities so you all get a chance to reset.</p></article>
-        <article><p class="fontawesome-icon"></p>
+        <article><p class="fontawesome-icon"><i class="fas fa-wifi"></i></p>
         <p class="features-item-description">Dedicated computer room for times that you must wifi.</p> </article>
       </div>
       </div>
@@ -106,8 +107,8 @@
         <div class="contact">
           <h4>Contact</h4>
           <address>
-            <div class="map-container">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1185.0434582155278!2d9.924468572770737!3d53.55621588628337!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47b185d25aacdff3%3A0xca9ec69d2cc5d3ac!2sHamburg%20Coding%20School!5e0!3m2!1spt-BR!2sde!4v1629989675265!5m2!1spt-BR!2sde" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe></div>
+            <class class="map-container">
+              <style>.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style><div class='embed-container'><iframe src='https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d387144.0075834208!2d-73.97800349999999!3d40.7056308!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c24fa5d33f083b%3A0xc80b8f06e177fe62!2sNew+York%2C+NY!5e0!3m2!1sen!2sus!4v1394298866288' width='600' height='450' frameborder='0' style='border:0'></iframe></div></class>
             <p>
             555-555-555 <br>
             hello@unplugged.com
