Added CSS styles

--- a/faq/index.html
+++ b/faq/index.html
@@ -13,8 +13,11 @@
 
     <link rel="manifest" href="site.webmanifest" />
     <link rel="apple-touch-icon" href="icon.png" />
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:500,700" rel="stylesheet">
-    
+    <link
+      href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:500,700"
+      rel="stylesheet"
+    />
+
     <!-- Place favicon.ico in the root directory -->
 
     <link rel="stylesheet" href="/css/normalize.css" />
@@ -26,11 +29,16 @@
   <body>
     <header>
       <div class="content-wrapper">
-        <a href="#"><img src="" alt="unplugged logo" /></a>
+        <figure>
+          <a href="#">
+            <img src="/img/unpluggedlogo.png" alt="unplugged logo" />
+          </a>
+        </figure>
+        <div class="header-divider"></div>
         <nav>
           <ul>
-            <li><a href="/about/index.html">About</a></li>
-            <li><a href="/index.html">Home</a></li>
+            <li><a href="faq/index.html">FAQ</a></li>
+            <li><a href="about/index.html">About</a></li>
           </ul>
         </nav>
       </div>
