--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
   <header>
     <div class ="content-wrapper">
       <figure>
-      <a href="">
-        <img src="/img/unpluggedlogo.png" alt="unplugged logo">
+      <a href="#">
+        <img src="img/unpluggedlogo.png" alt="unplugged logo">
       </a>
     </figure>
       <div class="header-divider"></div>
@@ -40,14 +40,15 @@
         </ul>
       </nav>
     </div>
-
   </header>
   <main>
+
     <section class="hero-area">
       <div class="content-wrapper">
-      <h1>Retreat from the desk,<br> return refreshed.</h1>
+      <h1>Retreat from the desk, return refreshed.</h1>
     </div>
     </section>
+
     <aside>
       <div class="content-wrapper">
         <div class="form-description">
@@ -67,19 +68,35 @@
      <h2> Have the work week you always dreamed of - without the bad wifi. </h2>
       <div class="features-items">
         <article>
-        <p class="fontawesome-icon"><i class="fas fa-campground"></i></p>
+        <p class="fontawesome-icon">
+          <i class="fas fa-campground"></i>
+        </p>
         <p class="features-item-description">
-          Located in a peaceful bungalow outside Lake Geneva, Winsconsin.</p></article>
-        <article><p class="fontawesome-icon"><i class="fas fa-bed"></i></p>
-        <p class="features-item-description">12 private rooms with ensuite bathrooms, 2 group meeting rooms, and 4 breakout rooms.</p></article>
-        <article><p class="fontawesome-icon"><i class="fas fa-utensils"></i></p>
-        <p class="features-item-description">Private chef team providing on demand meals - just like your team kitchen.</p></article>
-        <article><p class="fontawesome-icon"><i class="fas fa-shoe-prints"></i></p>
-        <p class="features-item-description">5 outdoor obstacle courses, including private beach 1/2 mile from the bungalow.</p></article>
-        <article><p class="fontawesome-icon"><i class="fas fa-smile"></i></p>
-        <p class="features-item-description">Retreat facilitator to manage your day to day activities so you all get a chance to reset.</p></article>
-        <article><p class="fontawesome-icon"><i class="fas fa-wifi"></i></p>
-        <p class="features-item-description">Dedicated computer room for times that you must wifi.</p> </article>
+          Located in a peaceful bungalow outside Lake Geneva, Winsconsin.
+        </p>
+      </article>
+        <article>
+          <p class="fontawesome-icon"><i class="fas fa-bed"></i>
+          </p>
+        <p class="features-item-description">12 private rooms with ensuite bathrooms, 2 group meeting rooms, and 4 breakout rooms.
+        </p>
+      </article>
+        <article>
+          <p class="fontawesome-icon"><i class="fas fa-utensils"></i></p>
+        <p class="features-item-description">Private chef team providing on demand meals - just like your team kitchen.</p>
+      </article>
+        <article>
+          <p class="fontawesome-icon"><i class="fas fa-shoe-prints"></i></p>
+        <p class="features-item-description">5 outdoor obstacle courses, including private beach 1/2 mile from the bungalow.</p>
+      </article>
+        <article>
+          <p class="fontawesome-icon"><i class="fas fa-smile"></i></p>
+        <p class="features-item-description">Retreat facilitator to manage your day to day activities so you all get a chance to reset.</p>
+      </article>
+        <article>
+          <p class="fontawesome-icon"><i class="fas fa-wifi"></i></p>
+        <p class="features-item-description">Dedicated computer room for times that you must wifi.</p>
+      </article>
       </div>
       </div>
       </section>
@@ -101,14 +118,13 @@
     </section>
   
   </main>
+
   <footer>
     <div class="content-wrapper">
       <div class="footer-content">
         <div class="contact">
           <h4>Contact</h4>
           <address>
-            <class class="map-container">
-              <style>.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style><div class='embed-container'><iframe src='https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d387144.0075834208!2d-73.97800349999999!3d40.7056308!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c24fa5d33f083b%3A0xc80b8f06e177fe62!2sNew+York%2C+NY!5e0!3m2!1sen!2sus!4v1394298866288' width='600' height='450' frameborder='0' style='border:0'></iframe></div></class>
             <p>
             555-555-555 <br>
             hello@unplugged.com
@@ -120,13 +136,13 @@
           <h4>Social</h4>
           <div class="social-icons">
             <p>
-              <a href="https://www.instagram.com/yoursite" target="_blank">Instagram</a>
+              <a href="https://www.instagram.com/yoursite" target="_blank"><i class="fab fa-instagram"></i></a>
             </p>
             <p>
-              <a href="https://www.facebook.com/yoursite" target="_blank">Facebook</a>
+              <a href="https://www.facebook.com/yoursite" target="_blank"><i class="fab fa-facebook"></i></a>
             </p>
             <p>
-              <a href="https://www.twitter.com/yoursite" target="_blank">Twitter</a>
+              <a href="https://www.twitter.com/yoursite" target="_blank"><i class="fab fa-twitter"></i></a>
             </p>
           </div>
         </div>
