--- a/about/index.html
+++ b/about/index.html
@@ -25,12 +25,17 @@
   <body>
     <!-- Add your site or application content here -->
     <header>
-      <div class="content-wrapper">
-        <a href="#"><img src="" alt="unplugged logo" /></a>
+      <div class ="content-wrapper">
+        <figure>
+        <a href="#">
+          <img src="/img/unpluggedlogo.png" alt="unplugged logo">
+        </a>
+      </figure>
+        <div class="header-divider"></div>
         <nav>
           <ul>
-            <li><a href="/faq/index.html">FAQ</a></li>
-            <li><a href="/index.html">Home</a></li>
+            <li><a href="faq/index.html">FAQ</a></li>
+            <li><a href="about/index.html">About</a></li>
           </ul>
         </nav>
       </div>
@@ -59,7 +64,9 @@
         </div>
       </section>
       <section class="map">
-        <figure></figure>
+        <figure>
+          <style>.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style><div class='embed-container'><iframe src='https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d387144.0075834208!2d-73.97800349999999!3d40.7056308!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c24fa5d33f083b%3A0xc80b8f06e177fe62!2sNew+York%2C+NY!5e0!3m2!1sen!2sus!4v1394298866288' width='600' height='450' frameborder='0' style='border:0'></iframe>
+        </figure>
       </section>
       <section class="contact-section">
         <div class="content-wrappper">
